<?xml version="1.0"?>
<package format="2">
  <name>husarion_ros</name>
  <version>0.0.1</version>
  <description>The husarion_ros package is containing nodes specific to Husarion robots.</description>

  <maintainer email="lukasz.mitka@husarion.com">Łukasz Mitka</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>astra_launch</exec_depend>
</package>
